--- a/index.html
+++ b/index.html
@@ -376,21 +376,21 @@
                                 </svg>
                             </a>
                         </li>
-                        <li href="" class="social-list-item">
+                        <li href="" class="social-list-item-footer">
                             <a href="" class="social-list-link theme-dark">
                                 <svg class="social-list-icon theme-dark">
                                     <use href="./images/sprite.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li href="" class="social-list-item">
+                        <li href="" class="social-list-item-footer">
                             <a href="" class="social-list-link theme-dark">
                                 <svg class="social-list-icon theme-dark">
                                     <use href="./images/sprite.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li href="" class="social-list-item">
+                        <li href="" class="social-list-item-footer">
                             <a href="" class="social-list-link theme-dark">
                                 <svg class="social-list-icon theme-dark">
                                     <use href="./images/sprite.svg#linkedin"></use>
@@ -399,6 +399,18 @@
                         </li>
                     </ul>
               </div>
+              <div class="footer-email-container">
+                <p class="footer-email-container-name">Подпишитесь на рассылку</p>
+                <form action="#" class="modal-form_email">
+                    <input type="mail" class="footer-email-name" name="user-email" title="email@gmail.com" required placeholder="E-mail">
+                    <button type="submit" class="modal-footer-wrapper-button">Подписаться
+                      <svg class="icon-send" aria-hidden="true" width="24" height="24">
+                        <use href="./images/sprite.svg#telegramm"></use>
+                      </svg>
+                    </button>
+                 </form>
+              </div>
+      </div>
             </div>      
     </footer>
 <!-- modal icon -->
@@ -451,7 +463,7 @@
             
             <span class="modal-form-input-btn">
               <button type="submit" class="modal-form-btn">Отправить</button>
-              </span>
+            </span>
           </form>
    
       </div>
