--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               </div>
               <div class="footer-email-container">
                 <p class="footer-email-container-name">Подпишитесь на рассылку</p>
-                <form action="#" class="modal-form_email">
+                <form action="#" class="modal-footer">
                     <input type="mail" class="footer-email-name" name="user-email" title="email@gmail.com" required placeholder="E-mail">
                     <button type="submit" class="modal-footer-wrapper-button">Подписаться
                       <svg class="icon-send" aria-hidden="true" width="24" height="24">
@@ -410,7 +410,7 @@
                     </button>
                  </form>
               </div>
-      </div>
+      
             </div>      
     </footer>
 <!-- modal icon -->
