--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <form action="#" class="modal-form">
             <p class="modal-form-head">Оставьте свои данные, мы вам перезвоним</p>
             <label for="" class="modal-form-field">
-              Имя
+             <p>Имя</p>
               <span class="modal-form-input-wrapper">
               <input type="text" class="modal-form-input" name="user-name" minlength="2" pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно быть введено НОРМАЛЬНЫМИ БУКВАМИ!!!" required>
               <svg class="modal-form-icon">
@@ -433,7 +433,7 @@
               </span>
             </label>
             <label for="" class="modal-form-field">
-              Телефон
+             <p>Телефон</p> 
               <span class="modal-form-input-wrapper">
                 <input type="tel" class="modal-form-input" name="user-phone" pattern="[0-9]{12}" title="0000000000" required>
               <svg class="modal-form-icon">
@@ -442,7 +442,7 @@
               </span>  
             </label>
             <label for="" class="modal-form-field">
-              Почта
+              <p>Почта</p>
               <span class="modal-form-input-wrapper">
                 <input type="mail" class="modal-form-input" name="user-email" title="email@gmail.com" required>
               <svg class="modal-form-icon">
@@ -451,7 +451,7 @@
               </span>
             </label>
             <label for="" class="modal-form-field">
-              Комментарий
+              <p>Комментарий</p>
               <span class="modal-form-input-wrapper">
               <textarea name="user-message" class="modal-form-message" placeholder="Введите текст"></textarea>
             </span>
@@ -461,9 +461,9 @@
             <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;
               <a href="#" class="modal-form-label-link">Условия договора</a></label>  
             
-            <span class="modal-form-input-btn">
+
               <button type="submit" class="modal-form-btn">Отправить</button>
-            </span>
+
           </form>
    
       </div>
